Bug Fixes
- Fixed potential null pointer in entities setChildList functions
- Updated SkuService GET query params to include excludeStageTaskIds
- Fixed bug with skuService GET query param stageTaskIds
- Temp fix to resolve bug when doing PUT on an entity whose current
version has a set child entity list, and updated version as an empty
child list.  Bug is because we are setting a new list instance on the
existing managed entity when performing getPatchEntities through
simpleUpdateService